tests/libdef_ignored_module/libdef_ignored_module.exp
Error: test.js:5
  5: (foo.bar : string); // error number ~> string
      ^^^^^^^ Cannot cast property `bar` to string because number [1] is incompatible with string [2].
  References:
    5: (foo.bar : string); // error number ~> string
        ^^^^^^^ [1]: number
    5: (foo.bar : string); // error number ~> string
                  ^^^^^^ [2]: string


Found 1 error
